[tool.poetry]
name = "ruvicorn-asgi"
version = "0.1.0"
description = ""
authors = ["Taein Min <maintain0404@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ruvicorn_core", from = './'},
    {include = "ruvicorn_asgi", from = './'},
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
