[package]
name = "ruvicorn_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruvicorn_core"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.5.0"
httparse = "1.8.0"
pyo3 = "0.19.0"
unicase = "2.7.0"
